--- a/demo-128-players.html
+++ b/demo-128-players.html
@@ -13,6 +13,14 @@
   <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
   <script src="dist/jquery.bracket.min.js" type="text/javascript"></script>
   <script src="dist/demo.js" type="text/javascript"></script>
+  <script type="text/javascript">
+
+  	$(document).ready(function() {
+  		Bracket.init();
+  		Bracket.initExample128();
+	});
+
+  </script>
 
 </body>
 </html>
