Fix of the graph for tournaments with a few players

--- a/demo-16-players-print.html
+++ b/demo-16-players-print.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>jQuery Bracket - Demo</title>
+  <title>jQuery Bracket - Demo 16 Players with Print Styles</title>
   <meta charset="UTF-8">
 
   <link rel="stylesheet" type="text/css" href="dist/jquery.bracket.min.css">
