--- a/demo-128-players.html
+++ b/demo-128-players.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>jQuery Bracket - Demo</title>
+  <title>jQuery Bracket - Demo 128 Players</title>
   <meta charset="UTF-8">
 
   <link rel="stylesheet" type="text/css" href="dist/jquery.bracket.min.css">
