--- a/demo-16-players-print.html
+++ b/demo-16-players-print.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
 
   <link rel="stylesheet" type="text/css" href="dist/jquery.bracket.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
 <body>
 
-  <div id="tournament-graph-framebox"></div>
+  <div id="tournament-graph-framebox"  class="bracket-holder"></div>
 
   <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
   <script src="dist/jquery.bracket.min.js" type="text/javascript"></script>
@@ -18,9 +19,8 @@
   	$(document).ready(function() {
   		Bracket.init();
   		Bracket.initExample16();
-
       $('.jQBracket').addClass('print');
-	});
+	   });
 
   </script>
 
