--- a/demo-8-teams-2-players.html
+++ b/demo-8-teams-2-players.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>jQuery Bracket - Demo 128 Players</title>
+  <title>jQuery Bracket - Demo 8 Teams (2 Players)</title>
   <meta charset="UTF-8">
 
   <link rel="stylesheet" type="text/css" href="dist/jquery.bracket.min.css">
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div id="tournament-graph-framebox" class="bracket-holder" style="padding: 50px">
+  <div id="tournament-graph-framebox" class="bracket-holder">
     <img src="dist/loading-anim.gif" class="bracket-loading">
   </div>
 
@@ -18,12 +18,11 @@
   <script src="dist/demo.js" type="text/javascript"></script>
   <script type="text/javascript">
 
-  	$(document).ready(function() {
-  		Bracket.init();
-  		Bracket.initExample128();
-	});
+  $(document).ready(function() {
+    Bracket.init();
+    Bracket.initExample8TeamsWith2Players();
+  });
 
   </script>
-
 </body>
 </html>
